fdo#47576: Support for textual links added (SVG Export)

Added Support to export textual links in SVG files, images still do not work

Change-Id: Id230618d2cc068b94eb0f0051d5db249a88a42f2